fixed  nav media quieries, and background overflow

--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,10 @@
     font-weight: 400;
 }
 
+body{
+    overflow-x: hidden;
+}
+
 .header{
     width: 100%;
     height: 100px;
@@ -209,10 +213,18 @@ main {
     padding: 15px;
 }
 
+#nav{
+    display: block;
+}
+
 /* BIO */
 
 }
 
 /* LARGE / Desktop */
 @media only screen and (min-width: 1024px) {
+
+    #nav{
+        display: block;
+    }
 }
